# homie-spec

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  conftest.py  example.py  mypy.ini  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
docs/: common.html  devices.html  index.html  messages.html  nodes.html  properties.html  validation.html
docs/homie_spec/: index.html  messages.html  nodes.html  properties.html  validation.html
homie_spec/: __init__.py  devices.py  messages.py  nodes.py  properties.py
tests/: __init__.py  common.py  generic.py  test_homie_devices.py  test_homie_nodes.py  test_homie_properties.py
