[tool.poetry]
name = "homie-spec"
version = "0.1.2"
description = "homie-spec is a Python library that handles the v4 Homie Convention"
authors = ["Xavier Francisco <xavier.n.francisco@gmail.com>"]
license = 'MIT'
readme = 'README.md'
keywords = ["homie", "mqtt"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
tox = "^3.14.3"
pdoc3 = "^0.7.2"
pytest = "^5.2"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.4.2"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.2"
pytest-black = "^0.3.7"
pytest-pylint = "^0.14.1"
hypothesis = "^5.0.0"

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py36,py37,py38
 
[testenv]
whitelist_externals = poetry
commands =
  poetry install -v
  poetry run pytest --mypy --pylint --black --doctest-modules --cov=homie_spec {posargs}
"""

[tool.coverage.run]
branch = true
source = ["homie_spec","tests"]

[tool.coverage.report]
exclude_lines = ["if self.debug:", "pragma: no cover", "raise NotImplementedError", "if __name__ == .__main__.:"]
ignore_errors = true
omit = ["tests/*"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
